md-docs/cli/cli-ref/cloud-registry/cli-ref/v0/registry/lifecycle-policy/index.md
[Документация Yandex Cloud](../../../../../../../index.md) > [Интерфейс командной строки](../../../../../../index.md) > [Справочник (англ.)](../../../../../index.md) > [cloud-registry](../../../index.md) > [v0](../../index.md) > [registry](../index.md) > lifecycle-policy > Overview

# yc cloud-registry v0 registry lifecycle-policy

Manage lifecycle policies for artifacts

#### Command Usage

Syntax:

`yc cloud-registry v0 registry lifecycle-policy <command>`

Aliases:

- `lifecycle-policies`

- `lp`

#### Command Tree

- [yc cloud-registry v0 registry lifecycle-policy change-state](change-state.md) — Changes the state of the specified lifecycle policy

- [yc cloud-registry v0 registry lifecycle-policy create](create.md) — Create a lifecycle policy.

- [yc cloud-registry v0 registry lifecycle-policy delete](delete.md) — Deletes the specified lifecycle policy

- [yc cloud-registry v0 registry lifecycle-policy dry-run](dry-run.md) — Simulate the lifecycle policy execution

- [yc cloud-registry v0 registry lifecycle-policy get](get.md) — Get information about a lifecycle policy.

- [yc cloud-registry v0 registry lifecycle-policy list](list.md) — List lifecycle policies.

- [yc cloud-registry v0 registry lifecycle-policy update](update.md) — Updates the specified lifecycle policy

#### Global Flags

#|
||Flag | Description ||
|| `--profile` | `string`

Set the custom profile. ||
|| `--region` | `string`

Set the region. ||
|| `--cloud-id` | `string`

Set the ID of the cloud to use. ||
|| `--folder-id` | `string`

Set the ID of the folder to use. ||
|| `--folder-name` | `string`

Set the name of the folder to use (will be resolved to id). ||
|| `--debug` | Debug logging. ||
|| `--debug-grpc` | Debug gRPC logging. Very verbose, used for debugging connection problems. ||
|| `--no-user-output` | Disable printing user intended output to stderr. ||
|| `--pager` | `string`

Set the custom pager. ||
|| `--no-pager` | Do not pipe help output through a pager. ||
|| `--format` | `string`

Set the output format: text (default), yaml, json, json-rest. ||
|| `--retry` | `int`

Enable gRPC retries. By default, retries are enabled with maximum 5 attempts.
Pass 0 to disable retries. Pass any negative value for infinite retries.
Even infinite retries are capped with 2 minutes timeout. ||
|| `--timeout` | `string`

Set the timeout. ||
|| `--token` | `string`

Set the OAuth token to use. ||
|| `--jq` | `string`

Query to select values from the response using jq syntax ||
|| `--endpoint` | `string`

Set the Cloud API endpoint (host:port). ||
|| `--impersonate-service-account-id` | `string`

Set the ID of the service account to impersonate. ||
|| `--no-browser` | Disable opening browser for authentication. ||
|| `--query` | `string`

Query to select values from the response using jq syntax ||
|| `--print-metadata` | Print operation metadata along with result. ||
|| `--syntax` | `string`

Choose syntax option. ||
|| `--cli-auto-prompt` | `string[="on"]`

Enable interactive auto-prompt mode. Values: on, partial, off. Bare --cli-auto-prompt is equivalent to --cli-auto-prompt=on. ||
|| `--no-cli-auto-prompt` | Disable interactive auto-prompt mode (overrides --cli-auto-prompt, env and profile). ||
|| `-h`, `--help` | Display help for the command. ||
|#